After Mahmoud,Nada,Manar tasks

--- a/Sakiny.API/Sakiny.API.csproj
+++ b/Sakiny.API/Sakiny.API.csproj
@@ -26,9 +26,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Saking.Reposetory\Saking.Repository.csproj" />
     <ProjectReference Include="..\Sakiny.Data\Sakiny.Data.csproj" />
     <ProjectReference Include="..\Sakiny.DTO\Sakiny.DTO.csproj" />
     <ProjectReference Include="..\Sakiny.Profiles\Sakiny.Profiles.csproj" />
+    <ProjectReference Include="..\Sakiny.Services\Sakiny.Services.csproj" />
   </ItemGroup>
 
 </Project>
