--- a/Sakiny.Services/DoctorDiet.Services.csproj
+++ b/Sakiny.Services/DoctorDiet.Services.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Saking.Reposetory\DoctorDiet.Repository.csproj" />
     <ProjectReference Include="..\Sakiny.DTO\DoctorDiet.DTO.csproj" />
+    <ProjectReference Include="..\Sakiny.Reposetory\DoctorDiet.Repository.csproj" />
   </ItemGroup>
 
 </Project>
